--- a/application/views/css/footer.css
+++ b/application/views/css/footer.css
@@ -1,5 +1,5 @@
 .footer-bs {
-    background-color: #ff8000;
+    background-color: #b34700;
 	padding: 10px 40px;
 	color: rgba(255,255,255,1.00);
 	margin-bottom: 20px;
