--- a/application/views/css/shade_color.css
+++ b/application/views/css/shade_color.css
@@ -1,12 +1,6 @@
 #topnav{
+   	margin:10px;
     background: #ff8000; /* Old browsers */
-background: -moz-radial-gradient(center, ellipse cover,  #ff8000 1%, #cc5200 100%); /* FF3.6+ */
-background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(1%,#ff8000), color-stop(100%,#cc5200)); /* Chrome,Safari4+ */
-background: -webkit-radial-gradient(center, ellipse cover,  #ff8000 1%,#cc5200 100%); /* Chrome10+,Safari5.1+ */
-background: -o-radial-gradient(center, ellipse cover,  #ff8000 1%,#cc5200 100%); /* Opera 12+ */
-background: -ms-radial-gradient(center, ellipse cover,  #ff8000 1%,#cc5200 100%); /* IE10+ */
-background: radial-gradient(ellipse at center,  #ff8000 1%,#cc5200 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff8000', endColorstr='#cc5200',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	
+    border-radius: 5px;
 
 }
