--- a/application/views/css/shade_color.css
+++ b/application/views/css/shade_color.css
@@ -1,5 +1,9 @@
 #topnav{
     background: #ff8000; /* Old browsers */
     border-color: #ff8000;
-    box-shadow:  0 3px 10px ; 
+    box-shadow:  0 3px 10px #252323;
+
+}
+.navbar{
+	border-radius: 0px !important; 
 }
